--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ body {
     gap: 20px;
     padding: 20px;
 }
+.chart-container {
+    width: 100%;
+    max-width: 300px; /* Ajuste o tamanho máximo para o gráfico */
+    margin: 0 auto;  /* Centraliza o gráfico */
+}
 .card {
     background-color: #3a3a3a; /* Cor de fundo das cards */
     border-radius: 10px;
@@ -35,9 +40,10 @@ body {
     width: 100%;
 }
 .chart {
-    height: 200px; /* Ajuste conforme necessário */
-    width: 100%;
+    height: 200px; /* Ajuste para o tamanho do gráfico */
+    width: 100% !important; /* Força o gráfico a usar 100% do espaço disponível */
 }
+
 .kpi {
     display: flex;
     justify-content: space-around;
